Servlet 60 test fixes